--- a/home.html
+++ b/home.html
@@ -18,9 +18,9 @@
     
 <footer class="mainheader">
     <br>
-    Author: Dravyn<br>
+    Author: Dre<br>
     &copy;Totally Not Copyright Reservered<br>
-   <small> <a href="mailto:dravynowens@gmail.com"> dravynowens@gmail.com</a> <small>
+   <small> <a href="mailto:###########@gmail.com"> ###########@gmail.com</a> <small>
 
 </body>
 </html>
